--- a/HTML/Day-1 Image in HTML/index.html
+++ b/HTML/Day-1 Image in HTML/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image in HTML</title>
+    <style>
+        h1{
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <h1>Top 5 Fourt Songs</h1>
