--- a/CSS/Day-8 Background Property/6 Background attachment/index.html
+++ b/CSS/Day-8 Background Property/6 Background attachment/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>applying linear-gradient During hover on Image</title>
+    <title>Background Attachment</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
-        <div class="container-1"></div>
-         <!-- <div class="container-2"></div> -->
-   </section>
+    <section class="section-1"></section>
+    <section class="section-2"></section>
+    <section class="section-3"></section>
+    <section class="section-4"></section>
 </body>
 </html>
