--- a/CSS/Day-17 Position/2 Absolute card Project/index.html
+++ b/CSS/Day-17 Position/2 Absolute card Project/index.html
@@ -19,9 +19,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                      Quam quod rem earum ducimus officia, et eum recusandae autem quas
                       harum dignissimos consequuntur asperiores fugiat ipsam, eligendi 
-                      nulla est optio natus hic exercitationem sed nam? Explicabo aut,
-                       pariatur praesentium cumque nostrum, corrupti obcaecati maxime
-                        porro illo doloremque numquam sapiente, ex autem?</p>
+                      nul</p>
                 <div class="btns">
                     <button>Roy</button>
                     <button>Raj</button>
